# Chapa-based-online-store

./: .gitignore  README.md  manage.py  package-lock.json  package.json  pyproject.toml  requeirment.txt  webpack.config.js
assets/: index.js
assets/js/: alpineFun.js  main.js
assets/styles/: bolt.css  bootstrap.min.css  custom.css  layout.css
manager/: serializer.py  urls.py  utils.py  views.py
manager/templates/: create_product.html  customer_detail.html  customers.html  dashboard.html  delivery_list.html  manager_home.html  order.html  update_product.html
manager/templates/Mcomponent/: manager_base.html  navbar.html  sidebar.html
selltools/: asgi.py  chapa.py  settings.py  telebirr.py  tools.py  urls.py  wsgi.py
staticfiles/: [test].css  bundle.js
staticfiles/css/: specfic.css
store/: admin.py  forms.py  models.py  urls.py  views.py
store/templates/: cart.html  catagories.html  checkout.html  home.html  product-detail.html  search.html
store/templates/component/: filter.html  topcart.html
store/templates/footer/: Terms.html  about.html  privacy.html
store/templates/utils/: footer.html  navbar.html  store.html
store/templatetags/: store.py
templates/account/: finishaccount.html  login.html  password-reset.html  passwordchange.html  signup.html  verification.html  verify.html
templates/allauth/layouts/: base.html
templates/faq/: answer_form.html  comments.html  question_detail.html  questions_list.html
users/: adapters.py  admin.py  backends.py  forms.py  managers.py  models.py  serializers.py  urls.py  utils.py  views.py
(+15 files in other folders)
